apps/cw-app/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cw-app
spec: {}
status: {}
