apps/cw-app/manifests/cw-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: cw-app
  name: cw-app
  namespace: cw-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cw-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cw-app
    spec:
      containers:
      - image: surenmcode/cw-app:3.0
        name: cw-app
        resources: {}
status: {}
