apps/cw-app/manifests/cw-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cw-app
  name: cw-app-svc
  namespace: cw-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cw-app
  type: ClusterIP
status:
  loadBalancer: {}
