apps/cw-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  namespace: cw-app
spec:
  tls:
  - hosts:
    - aksdemo.contosodev.com
    secretName: tls-secret
  rules:
  - host: aksdemo.contosodev.com
    http:
      paths:
      - path: /cw-app(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: cw-app
            port:
              number: 80
